<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_gradient">
        <ImageView
            android:id="@+id/imgIllustration"
            android:layout_width="300dp"
            android:layout_height="280dp"
            android:contentDescription="@string/no_image"
            android:src="@drawable/no_bg_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp" />

        <!-- Hi Student -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_msg"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/imgIllustration"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp" />
        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_continue"
            android:textSize="14sp"
            android:textColor="#DCE3FF"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            android:layout_marginTop="4dp" />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="28dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <!-- Email -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="12sp"
                    android:textColor="@color/txt_primary" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_user_name"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                    android:textColor="@color/txt_primary"
                    android:layout_marginBottom="20dp" />

                <!-- Password -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_password"
                    android:textSize="12sp"
                    android:textColor="@color/txt_primary"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textSize="14sp"
                        android:textColor="@color/txt_primary"
                        android:layout_marginBottom="20dp" />

                    <ImageView
                        android:id="@+id/show_pass_img"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/show"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"  />

                    <ImageView
                        android:id="@+id/hide_pass_img"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/hide"
                        android:layout_marginEnd="16dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:text="@string/txt_sign_in"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="24dp"
                    android:paddingHorizontal="20dp"
                    android:drawableEnd="@drawable/baseline_arrow_forward_24"
                    android:background="@drawable/bg_signin_button" />

                <!-- Forgot -->
                <TextView
                    android:id="@+id/tvForgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textSize="14sp"
                    android:textColor="@color/txt_primary"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
