<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <!-- Top Image -->
        <ImageView
            android:id="@+id/ivPlanImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/image"
            android:scaleType="fitCenter"
            android:contentDescription="@string/plan_image" />

        <!-- Plan Card -->
        <LinearLayout
            android:id="@+id/planCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_dummy_new"
            android:layout_marginTop="16dp"
            android:padding="20dp"
            android:gravity="center_horizontal">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <TextView
                    android:id="@+id/tvTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/tvPlanName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pro"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_margin="8dp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvPlanPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs_1_day"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:textColor="@android:color/white" />




        </LinearLayout>

        <!-- Description -->
        <TextView
            android:id="@+id/tvPlanDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/head_text"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="21sp" />

        <!-- Features RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFeatures"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="12dp" />

    </LinearLayout>
</layout>
