<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEF1F6"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#2E2E2E"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="70dp" />

        <!-- Card 1 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/go_to_screen_1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@color/btn_1"
                android:padding="10dp"
                android:textStyle="bold"
                android:clipToOutline="true" />
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/card1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/go_to_screen_2"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@color/btn_2"
                android:textStyle="bold"
                android:padding="10dp"
                android:clipToOutline="true" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/card2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/go_to_screen_3"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:background="@color/btn_3"
                android:textStyle="bold"
                android:padding="10dp"
                android:clipToOutline="true" />
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
